--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,13 +1,14 @@
-@layer base;
-@import "./atom.css" layer(base);
+@layer base, components, utilities;
+@import './atom/base.css' layer(base);
+@import './atom/component.css' layer(components);
+@import './atom/utility.css' layer(utilities);
+
+:root {
+  --spacing: 0.25rem;
+}
 
 body {
   margin: 0;
-  min-height: 100vh;
   background-color: #f8fafb;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-h2 {
-  font-size: 12px;
 }
