chore: 调整项目结构

--- a/src/app/button.html
+++ b/src/app/button.html
@@ -108,8 +108,8 @@
   </body>
   <script type="module">
     import { colorCode, variantCode, roundedCode, sizeCode, disabledCode } from './codes/button.js';
-    import '../src/button/index.js';
-    import '../src/theme-provider/index.js';
+    import '../ui/button/index.js';
+    import '../ui//theme-provider/index.js';
     import './components/code-block.js';
     import './components/preview-code-switcher.js';
 
