--- a/src/docs/styles/layout.css
+++ b/src/docs/styles/layout.css
@@ -1,11 +1,13 @@
 @layer components {
   .main-container {
-    width: 54%;
-    margin: 32px 0;
-    max-width: 960px;
+    width: 60%;
+    max-width: 728px;
     margin-inline: auto;
+    padding-bottom: 24px;
+    margin-top: 72px;
     @media (max-width: 768px) {
       width: 100%;
+      padding: 0 16px;
     }
   }
 }
