feat: va-tooltip组件

--- a/src/docs/styles/layout.css
+++ b/src/docs/styles/layout.css
@@ -15,10 +15,7 @@
     }
   }
   .enum-tags {
-    display: flex;
-    gap: 6px;
-    align-items: center;
-    flex-wrap: wrap;
+    white-space: wrap;
     color: var(--border-color);
   }
 }
